<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginBottom="32dp"
                android:text="@string/str_check_box_tester"
                android:gravity="center"
                android:textColor="@color/design_default_color_primary"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="3dp"
                android:text="@string/str_texto_termo"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ciente"
                android:id="@+id/cbTermo"
                android:layout_marginBottom="18dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_concordo"
                android:text="@string/str_concordo"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:backgroundTint="@color/design_default_color_primary"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>