<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_login"
                android:layout_marginBottom="24dp"
                app:tint="@color/design_default_color_primary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_hint_email"
                android:id="@+id/tilLogin"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tieLogin"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_hint_senha"
                android:id="@+id/tilSenha"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tieSenha"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/str_salvar_login"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/swSalvarLoginSenha"
                android:layout_marginBottom="16dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_entrar"
                android:id="@+id/btnEntrar"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/design_default_color_primary"/>

            <TextView
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_nao_sou_cadastrado"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/tvCadastro"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>